# avatar-sdk-python

./: CLAUDE.md  README.md  pyproject.toml  test-local.sh  tox.ini
.github/workflows/: publish.yml  test.yml
examples/connection_pool/: main.py
examples/http_service/: main.py
examples/single_audio_clip/: main.py
proto/: buf.gen.yaml  message.proto
src/avatar_sdk_python/: avatar_session.py
src/avatarkit/: __init__.py  audio_encoder.py  avatar_session.py  errors.py  logid.py  session_config.py
tests/: test_audio_encoder.py  test_avatar_session_v2.py  test_connection_pool.py  test_e2e_errors.py  test_e2e_request.py
