[project]
name = "avatar-sdk-python"
version = "0.1.0"
description = "Python SDK for avatar WebSocket services with audio streaming and animation frame reception"
readme = "README.md"
authors = [
    { name = "3DRX", email = "3drxkjy@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["avatar", "websocket", "sdk", "audio", "animation", "protobuf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.13.2",
    "nanoid>=2.0.0",
    "protobuf>=6.33.2",
    "websockets>=15.0.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
