[project]
name = "avatarkit"
version = "0.1.3"
description = "Python SDK for avatar WebSocket services with audio streaming and animation frame reception"
readme = "README.md"
authors = [
    { name = "3DRX", email = "3drxkjy@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["avatar", "websocket", "sdk", "audio", "animation", "protobuf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.9.0",
    "nanoid>=2.0.0",
    "protobuf>=5.28.3",
    "websockets>=10.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.14.14",
    "tox>=4.0.0",
]
